--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,15 @@
     "@ant-design/icons": "^6.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@tanstack/react-query": "^5.81.5",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "antd": "^5.26.3",
     "axios": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.8.1",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
