--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,29 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^6.0.0",
-    "@monaco-editor/react": "^4.7.0",
-    "@tanstack/react-query": "^5.81.5",
+    "@ant-design/icons": "^5.5.2",
+    "@monaco-editor/react": "^4.6.0",
+    "@tanstack/react-query": "^5.62.2",
+    "@xterm/addon-attach": "^0.11.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
-    "antd": "^5.26.3",
-    "axios": "^1.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^6.22.3",
+    "allotment": "^1.20.2",
+    "antd": "^5.22.3",
+    "axios": "^1.7.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.2",
     "socket.io-client": "^4.8.1",
-    "zustand": "^4.4.1"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^8.57.0",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.5.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^13.23.0",
-    "vite": "^5.2.10"
+    "@eslint/js": "^9.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "vite": "^6.0.1"
   }
 }
